--- a/Sparc.MongoQueue.Tests/Sparc.MongoQueue.Tests.csproj
+++ b/Sparc.MongoQueue.Tests/Sparc.MongoQueue.Tests.csproj
@@ -59,7 +59,9 @@
     <Compile Include="MongoQueueTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Sparc.MongoQueue\Sparc.MongoQueue.csproj">
