--- a/Sparc.MongoQueue.Tests/packages.config
+++ b/Sparc.MongoQueue.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="mongocsharpdriver" version="1.5" targetFramework="net40" />
+  <package id="mongocsharpdriver" version="1.6" />
   <package id="Should" version="1.1.12.0" />
 </packages>
