Updated C# Mongo Driver to 1.7.1

--- a/Sparc.MongoQueue/packages.config
+++ b/Sparc.MongoQueue/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="mongocsharpdriver" version="1.5" targetFramework="net40" />
   <package id="mongocsharpdriver" version="1.6" />
+  <package id="mongocsharpdriver" version="1.7.1" targetFramework="net40" />
 </packages>
