--- a/Sparc.MongoQueue.Tests/packages.config
+++ b/Sparc.MongoQueue.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="mongocsharpdriver" version="1.5" targetFramework="net40" />
   <package id="mongocsharpdriver" version="1.6" />
+  <package id="mongocsharpdriver" version="1.7.1" targetFramework="net40" />
   <package id="Should" version="1.1.12.0" />
 </packages>
